--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                         <div class="row">
                             <div class="col-md-3 scrollflow -slide-top -opacity" style="font-size: 14px;color: #ccc">
                                 <div class="contato_espaco"><span class="glyphicon glyphicon-map-marker" style="margin-right: 5px"></span> Manhuaçu/MG</div>
-                                <div class="contato_espaco"><span class="glyphicon glyphicon-envelope" style="margin-right: 5px"></span> rafaelfenix@gmail.com</div>
+                                <div class="contato_espaco"><span class="glyphicon glyphicon-envelope" style="margin-right: 5px"></span> dossantosrafael192@gmail.com</div>
                                 <div class="contato_espaco"><span class="glyphicon glyphicon-earphone" style="margin-right: 5px"></span> 00 00000-0000</div>
                                 <ul class="sociais" style="margin-bottom: 30px;display: table;">
                                     <li><a href="#"><img src="images/sociais/facebook.png"></a></li>
