--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="keywords" content="HTML,CSS,JQUERY,MYSQL,PHP,GIT,GITHUB,LINUX,BOOTSTRAP,DESENVOLVIMENTO WEB,PROGRAMAÇÃO PHP,WEBDESIGN">
         <meta name="author" content="Rafael dos Santos">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Rafael dos Santos</title>
+        <title>Rafael dos Santos - desenvolvedor web</title>
         <!-- Última versão CSS compilada e minificada -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="css/estilo.css">
