--- a/index.html
+++ b/index.html
@@ -211,13 +211,13 @@
 
                                     <div class="row campo_mensagem">
                                         <div class="col-md-12">
-                                            <textarea placeholder="Digite sua mensagem" class="form-control"></textarea>
+                                            <textarea placeholder="(Formulario desativado no momento!)" class="form-control"></textarea>
                                         </div>
                                     </div>
 
                                     <div class="row" style="margin-top: 30px">
                                         <div class="col-md-12">
-                                            <input type="submit" class="btn form-control" style="background: #008AB8;color: white">
+                                            <input type="submit" value="Enviar" class="btn form-control" style="background: #008AB8;color: white">
                                         </div>
                                     </div>
                                 </form>
