--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="video_background_filtro"></div>
 
                 <div class="banner_texto">
-                    <div><span class="boas_vindas">BEM VINDO</span></div>
+                    <div><span class="boas_vindas">BEM VINDO, MEU NOME É</span></div>
                     <h1>Rafael dos Santos</h1>
                     <h3 class="h3_secundario_banner1">Temos a solução que você precisa para sua empresa</h3>
                     <h3 class="h3_secundario_banner">Venha e faça um orçamento gratuitamente!</h3>
