--- a/index.html
+++ b/index.html
@@ -235,6 +235,6 @@
         <!-- Última versão JavaScript compilada e minificada -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <script type="text/javascript" src="js/eskju-jquery-scrollflow.js"></script>
-        <script src="js/estilo.js"></script>
+        <script async src="js/estilo.js"></script>
     </body>
 </html>
